--- a/views/home.pug
+++ b/views/home.pug
@@ -56,17 +56,17 @@ block content
                             a(target="_blank")
                                 span.category-icon
                                     span.glyphicon.glyphicon-remove
-                                span.category-label 还没想好
+                                span.category-label X
                         li.category-item
                             a(target="_blank")
                                 span.category-icon
                                     span.glyphicon.glyphicon-remove
-                                span.category-label 还没想好
+                                span.category-label X
                         li.category-item
                             a(target="_blank")
                                 span.category-icon
                                     span.glyphicon.glyphicon-remove
-                                span.category-label 还没想好
+                                span.category-label X
                 if (current_user)
                     div.author-card.is-placeholder
                     div.card.author-card.js-stuck
