--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -818,6 +818,14 @@ footer ul li {
     color: #1e1e1e;
 }
 
+.Topic-badge .label {
+    display: inline-block;
+    margin-right: 5px;
+    padding: 5px;
+    font-size: 10%;
+    font-weight: normal;
+}
+
 .TopicHeader-detail {
     /*min-height: 10px;
     max-height: 51px;*/
@@ -1179,7 +1187,7 @@ footer ul li {
 }
 
 .category-icon-fire {
-    color: #f00;
+    color: #ff6428;
 }
 
 .category-icon-good {
@@ -1360,20 +1368,6 @@ footer ul li {
 /*editor*/
 .editor-btn-group {
     text-align: center;
-}
-
-.btn-form {
-    border: 1px solid rgba(27, 31, 35, 0.2);
-    border-radius: 0.25em;
-    background-color: #2e6da4;
-    background-image: linear-gradient(-180deg, #337ab7 0%, #2e6da4 90%);
-}
-
-.btn-form:hover,
-.btn-form:focus {
-    background-color: #2c65a1;
-    background-image: linear-gradient(-180deg, #2e77b2 0%, #2c65a1 90%);
-    border-color: rgba(27, 31, 35, 0.5);
 }
 
 .reply-form .CodeMirror, .reply2-form .CodeMirror {
@@ -2072,4 +2066,9 @@ footer ul li {
 .search-input {
     border-top: none;
     border-radius: 0;
+}
+
+/*markdown editor*/
+.markdown-editor {
+    border: 1px solid #ccc;
 }
