--- a/views/sign/sign_up.pug
+++ b/views/sign/sign_up.pug
@@ -36,20 +36,20 @@ block content
                 h2.bg-primary 加入的理由
                 ul.features-list
                     li
-                        strong 送金币
+                        strong welcome
                     li
-                        strong 送装备
+                        strong welcome
                     li.divider(role="separator")
                     li
                         svg.icon(aria-hidden="true" height="16" version="1.1" viewBox="0 0 12 16" width="12")
                             path(fill-rule="evenodd" d="M12 5l-8 8-4-4 1.5-1.5L4 10l6.5-6.5z")
-                        | 送手机
+                        | welcome
                     li
                         svg.icon(aria-hidden="true" height="16" version="1.1" viewBox="0 0 12 16" width="12")
                             path(fill-rule="evenodd" d="M12 5l-8 8-4-4 1.5-1.5L4 10l6.5-6.5z")
-                        | 送钱
+                        | welcome
                     li
                         svg.icon(aria-hidden="true" height="16" version="1.1" viewBox="0 0 12 16" width="12")
                             path(fill-rule="evenodd" d="M12 5l-8 8-4-4 1.5-1.5L4 10l6.5-6.5z")
-                        | 送女朋友
+                        | welcome
 
