--- a/views/topic/index.pug
+++ b/views/topic/index.pug
@@ -74,6 +74,13 @@ block content
                             span.tag-content
                                 a(href="#") #{topic.tab}
                     div.TopicHeader-title #{topic.title}
+                    div.Topic-badge
+                        if (topic.top)
+                            span.label.label-success 置顶
+                        if (topic.good)
+                            span.label.label-warning 精华
+                        if (topic.lock)
+                            span.label.label-danger 锁定
                     div.TopicHeader-detail
                         - var c = markdown(topic.content)
                         | !{c}
