--- a/views/search/index.pug
+++ b/views/search/index.pug
@@ -2,23 +2,26 @@ extends ../home
 include ../mixins/user_item
 
 block home_content
-    div.card.nav-tabs-box
-        ul.nav.nav-tabs
-            if (type == 'topic')
-                li.active(role="presentation")
-                    a 文章
-            else
-                li(role="presentation")
-                    a(href="/search?type=topic&q=" + q) 文章
-            if (type == 'user')
-                li.active(role="presentation")
-                    a 用户
-            else
-                li(role="presentation")
-                    a(href="/search?type=user&q=" + q) 用户
+    div.card.search-header
+        form.search-form
+            div.search-inner
+                input.search-input(type="search" name="q" value= q placeholder='搜索' autocomplete='off')
+                button.search-btn(type='submit')
+                    span.glyphicon.glyphicon-search
+                    span 搜索
+        div.search-nav
+            div.search-nav-body
+                if (type === 'topic')
+                    span.item.active(role="presentation") 文章
+                else
+                    a.item(role="presentation" href="/search?type=topic&q=" + q) 文章
+                if (type === 'user')
+                    span.item.active(role="presentation") 用户
+                else
+                    a.item(role="presentation" href="/search?type=user&q=" + q) 用户
 
     if (topics)
-        if (topics.length != 0)
+        if (topics.length !== 0)
             each topic in topics
                 +topic_item(current_user,topic,markdown)
             div.card
