--- a/views/index.pug
+++ b/views/index.pug
@@ -8,4 +8,5 @@ block home_content
     else
         div.EmptyState.card.topic-item
             div.EmptyState-inner
+                img(src="/public/images/error_panfish.png" alt="mascot")
                 span 空
