--- a/views/user/index.pug
+++ b/views/user/index.pug
@@ -3,4 +3,5 @@ extends layout
 block user_content
     div.EmptyState
         div.EmptyState-inner
+            img(src="/public/images/error_panfish.png" alt="mascot")
             span 空
