--- a/views/user/follower.pug
+++ b/views/user/follower.pug
@@ -10,4 +10,5 @@ block user_content
     else
         div.EmptyState
             div.EmptyState-inner
+                img(src="/public/images/error_panfish.png" alt="mascot")
                 span 空
