--- a/views/user/topic.pug
+++ b/views/user/topic.pug
@@ -10,6 +10,7 @@ block user_content
     else
         div.EmptyState
             div.EmptyState-inner
+                img(src="/public/images/error_panfish.png" alt="mascot")
                 span 空
 
 
