:lipstick: update empty style

--- a/views/message/index.pug
+++ b/views/message/index.pug
@@ -30,4 +30,5 @@ block content
                     else
                         div.EmptyState
                             div.EmptyState-inner
-                                span 空
+                                img(src="/public/images/error_panfish.png" alt="mascot")
+                                p 空
