:bug: fix tab topic page

--- a/views/tab/index.pug
+++ b/views/tab/index.pug
@@ -5,7 +5,7 @@ block home_content
         h2.tabs-title
             span.glyphicon.glyphicon-th-large
             | 话题广场
-        if (collections.length != 0)
+        if (tabs.length != 0)
             div.list
                 each tab in tabs
                     div.item
