--- a/views/user/setting/account.pug
+++ b/views/user/setting/account.pug
@@ -21,13 +21,13 @@ block content
                     +alert('success',success)
                 form.user-profile-form(method="post" action="/settings/account")
                     div.form-group
-                        label.user-profile-label 旧密码
-                        input.form-control.user-profile-input(name="oldPassword" type="password" tabindex="2" required)
+                        label.user-profile-label(for="oldPassword") 旧密码
+                        input.form-control.user-profile-input(name="oldPassword" id="oldPassword" type="password" tabindex="2" required)
                     div.form-group
-                        label.user-profile-label 新密码
-                        input.form-control.user-profile-input(name="password" type="password" tabindex="2" required)
+                        label.user-profile-label(for="password") 新密码
+                        input.form-control.user-profile-input(name="password" id="password" type="password" tabindex="2" required)
                     div.form-group
-                        label.user-profile-label 确认新密码
-                        input.form-control.user-profile-input(name="rePassword" type="password" tabindex="2" required)
+                        label.user-profile-label(for="rePassword") 确认新密码
+                        input.form-control.user-profile-input(name="rePassword" id="rePassword" type="password" tabindex="2" required)
                     div.form-group
                         input.btn.btn-primary.center-block(type="submit" value="提交")
